# LocalScribe

./: .gitignore  CLI.md  LICENSE  PROJECT_BRIEF.md  README.md  build-app.sh  build-bundle.sh  index.html  install.sh  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
scribe-py/: README.md  pyproject.toml
scribe-py/src/scribe_py/: __init__.py  __main__.py  control.py  ipc.py
scribe-py/src/scribe_py/core/: audio.py  selector.py  transcriber_base.py  transcriber_ct2.py  transcriber_mlx.py  types.py
scribe-py/src/scribe_py/correctors/: base.py  noop.py  openai_compatible.py  prompts.py
scribe-py/src/scribe_py/diarizers/: __init__.py  resemblyzer_diarizer.py
scribe-py/src/scribe_py/exporters/: _common.py  json_export.py  md.py  srt.py  txt.py
scribe-py/src/scribe_py/polishers/: article_polisher.py
scripts/: correct_with_deepseek.py  format_prose.py  polish_article.py  transcribe.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: sidecar_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: articles.rs  commands.rs  ipc.rs  lib.rs  library.rs  main.rs  model_check.rs  secrets.rs  settings.rs  sidecar.rs
src/components/: ArticleViewer.tsx  ArticlesPanel.tsx  DropZone.tsx  DuplicateFileDialog.tsx  Icons.tsx  LibraryPanel.tsx  Logo.tsx  ModelMissingScreen.tsx  PinArticleDialog.tsx  PrivacyNotice.tsx  ResultTabs.tsx  SegmentList.tsx  SettingsDialog.tsx  TaskQueue.tsx
src/hooks/: usePipeline.ts
src/lib/: format.ts  ipc.ts
src/stores/: settings-store.ts  tasks-store.ts
