[project]
name = "scribe-py"
version = "0.1.0"
description = "LocalScribe Python sidecar — Whisper transcription + LLM correction pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mlx-whisper>=0.4.3 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "faster-whisper>=1.0.3",
    "ffmpeg-python>=0.2.0",
    "huggingface_hub>=0.24",
    "openai>=1.50",
    "python-dotenv>=1.0",
]

[project.scripts]
scribe-py = "scribe_py.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribe_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
