[package]
name = "localscribe"
version = "1.0.0"
description = "LocalScribe — offline audio transcription with optional LLM correction"
authors = ["LocalScribe contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "localscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
